@@ -1,3 +1,11 @@
+2004-11-10  John ffitch  <jpff@codemist.co.uk>
+
+	* H/csdl.h (FLINKAGE): defined
+
+	* Top/dl_opcodes.c: Allow definitions of fgens
+
+	* H/csoundCore.h: Added NGFENS structure
+
 2004-11-09  John ffitch  <jpff@codemist.co.uk>
 
 	* Engine/fgens.c (fgens): Started named fgens
